Fix order list on mobile

--- a/saleor/static/scss/storefront/components/_userprofile.scss
+++ b/saleor/static/scss/storefront/components/_userprofile.scss
@@ -42,6 +42,9 @@
         transition: 0.3s;
         border: 0;
         text-transform: uppercase;
+        @include media-breakpoint-down(sm) {
+          padding: $global-padding / 2 $global-padding;
+        }
         h3 {
           color: $skull-gray;
           @include media-breakpoint-down(sm) {
